// Intended to test resource name generation for a message from a file without
// any RPCs

syntax = "proto3";

package google.example.library.v1;

option go_package = "google.golang.org/genproto/googleapis/example/library/v1;library";
option java_multiple_files = true;
option java_outer_classname = "BookFromAnywhereProto";
option java_package = "com.google.example.library.v1";

// A single book in the archives or library.
message BookFromAnywhere {
  // The resource name of the book.
  // Book names have the form `bookShelves/{shelf_id}/books/{book_id}` or
  // `archives/{archive_id}/books/{book_id}`.
  string name = 1;

  // The name of the book author.
  string author = 2;

  // The title of the book.
  string title = 3;

  // Value indicating whether the book has been read.
  bool read = 4;
}
